--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,17 @@ before_install:
 
 script:
  - docker run khanahmad1314/dockersetup npm run test -- --coverage
+
+deploy:
+ provider: elasticbeanstalk
+ region: "us-east-1"
+ app: "dockersetup"
+ env: "Dockersetup-env"
+ bucket_name: "elasticbeanstalk-us-east-1-360459250934"
+ bucket_path: "dockersetup"
+ on:
+  branch: master
+
+ access_key_id: $AWS_ACCESS_KEY
+ secret_access_key:
+  secure: "$AWS_SECRET_KEY"
