--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,8 +3,8 @@ FROM node:alpine
 #Use work directory
 WORKDIR /app
 #Download and install a dependency
-COPY package.json .
+COPY package*.json ./
 RUN npm install
-COPY . .
+COPY ./ ./
 #Tell the image what to do when it starts as a container
 CMD ["npm" , "start" , "run"]
