--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,6 +5,6 @@ WORKDIR /app
 #Download and install a dependency
 COPY package*.json ./
 RUN npm install
-COPY ./ ./
+COPY . .
 #Tell the image what to do when it starts as a container
 CMD ["npm" , "start" , "run"]
